nelma types fixing

--- a/wiki_names_titles.ipynb
+++ b/wiki_names_titles.ipynb
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "{'en'}\n",
-      "{'uk', 'en', 'nb', 'lb', 'lt', 'nn', 'ru', 'cs', 'fi', 'da', 'vi', 'zh', 'ar', 'fr', 'hu', 'pt', 'kk', 'my', 'fa', 'id', 'sv', 'tr', 'eu'}\n"
+      "{'da', 'id', 'cs', 'en', 'sv', 'eu', 'vi', 'hu', 'fa', 'lb', 'ru', 'ar', 'pt', 'nb', 'uk', 'lt', 'my', 'tr', 'fr', 'zh', 'kk', 'nn', 'fi'}\n"
      ]
     }
    ],
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "2dacf8cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2aebe2c15694bfd875a4617066c975d",
+       "model_id": "4fdced7d265a4202aaef2254f0d9f7f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,7 +280,7 @@
        "          'PER_fn1_cy_Latn_': 1}))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "59ec7399",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "905ad54008eb4e35a3e9f5e4061f8e71",
+       "model_id": "ec391466f492420f91d566edde28212e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,7 +331,7 @@
        "({'tit'}, {'tit'}, 790368)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,14 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "b14fecbd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e17ae0089e74edda0db0bb60a1117fd",
+       "model_id": "f963c86cd9264db29d967303a5dc0896",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "7ff9e7ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17bd850663994e12a0ec1a0c0d10bb1d",
+       "model_id": "e36f7f2bef1145daa43efe944662a93b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -418,39 +418,39 @@
     {
      "data": {
       "text/plain": [
-       "(Counter({'W_tit_sl_Latn_': 4043,\n",
-       "          'W_tit_de_Latn_': 4043,\n",
+       "(Counter({'W_tit_de_Latn_': 4043,\n",
+       "          'W_tit_sl_Latn_': 4043,\n",
        "          'W_tit_wa_Latn_': 120,\n",
        "          'W_tit_fr_Latn_': 10}),\n",
        " Counter({'W_ln__unkn_': 1,\n",
        "          'W_fn0__unkn_': 1,\n",
-       "          'W_tit_uk_Latn_': 222,\n",
-       "          'W_tit_en_Latn_': 222,\n",
-       "          'W_tit_nb_Latn_': 222,\n",
-       "          'W_tit_lb_Latn_': 222,\n",
-       "          'W_tit_lt_Latn_': 222,\n",
-       "          'W_tit_nn_Latn_': 222,\n",
-       "          'W_tit_ru_Latn_': 222,\n",
-       "          'W_tit_cs_Latn_': 222,\n",
-       "          'W_tit_fi_Latn_': 222,\n",
        "          'W_tit_da_Latn_': 222,\n",
-       "          'W_tit_vi_Latn_': 222,\n",
-       "          'W_tit_zh_Latn_': 222,\n",
-       "          'W_tit_ar_Latn_': 222,\n",
-       "          'W_tit_fr_Latn_': 222,\n",
-       "          'W_tit_hu_Latn_': 222,\n",
-       "          'W_tit_pt_Latn_': 222,\n",
-       "          'W_tit_kk_Latn_': 222,\n",
-       "          'W_tit_my_Latn_': 222,\n",
-       "          'W_tit_fa_Latn_': 531,\n",
        "          'W_tit_id_Latn_': 222,\n",
+       "          'W_tit_cs_Latn_': 222,\n",
+       "          'W_tit_en_Latn_': 222,\n",
        "          'W_tit_sv_Latn_': 222,\n",
-       "          'W_tit_tr_Latn_': 222,\n",
        "          'W_tit_eu_Latn_': 222,\n",
+       "          'W_tit_vi_Latn_': 222,\n",
+       "          'W_tit_hu_Latn_': 222,\n",
+       "          'W_tit_fa_Latn_': 531,\n",
+       "          'W_tit_lb_Latn_': 222,\n",
+       "          'W_tit_ru_Latn_': 222,\n",
+       "          'W_tit_ar_Latn_': 222,\n",
+       "          'W_tit_pt_Latn_': 222,\n",
+       "          'W_tit_nb_Latn_': 222,\n",
+       "          'W_tit_uk_Latn_': 222,\n",
+       "          'W_tit_lt_Latn_': 222,\n",
+       "          'W_tit_my_Latn_': 222,\n",
+       "          'W_tit_tr_Latn_': 222,\n",
+       "          'W_tit_fr_Latn_': 222,\n",
+       "          'W_tit_zh_Latn_': 222,\n",
+       "          'W_tit_kk_Latn_': 222,\n",
+       "          'W_tit_nn_Latn_': 222,\n",
+       "          'W_tit_fi_Latn_': 222,\n",
        "          'W_tit_he_Latn_': 786}))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,14 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 37,
    "id": "92a12e9a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0122cb1edd79446eb5cb2157035b7681",
+       "model_id": "5846a28209ca445384241ca6ff5b6695",
        "version_major": 2,
        "version_minor": 0
       },
@@ -500,7 +500,7 @@
        "(Counter({('W.', 'tit'): 1486}), Counter({('W', 'tit'): 222}))"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,24 +510,25 @@
     "for tok, v in tqdm(names.items(), total=len(names)):\n",
     "    for t_prov, cnt in v.items():\n",
     "        src, t, lang, script, cc = t_prov.split('_')\n",
-    "        toks[f'{tok}_{lang}_{script}'][(src, t)] += cnt\n",
-    "        if tok[-1] == '.' and tok.count('.') == 1:\n",
-    "            toks[f'{tok[:-1]}_{lang}_{script}'][(src+'.', t)] += cnt\n",
+    "        tok = tok.replace('_', ' ')\n",
+    "        if len(tok)>0:\n",
+    "            toks[f'{tok}_{lang}_{script}'][(src, t)] += cnt\n",
+    "            if tok[-1] == '.' and tok.count('.') == 1:\n",
+    "                toks[f'{tok[:-1]}_{lang}_{script}'][(src+'.', t)] += cnt\n",
     "toks = dict(toks)\n",
     "toks['dr_en_Latn'], toks['mba_en_Latn']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 38,
    "id": "b4406ec7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({1074},\n",
-       " 'tit_hr_Latn_',\n",
+       "({1521},\n",
        " {'de_Latn_',\n",
        "  'de_Latn_AT',\n",
        "  'de_Latn_CH',\n",
@@ -536,7 +537,7 @@
        "  'de_Latn_NL'})"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,45 +554,24 @@
     "i2t = {k: v for v, k in t2i.items()}\n",
     "prov2set = dict(prov2set)    \n",
     "i2t = {k: v for v, k in t2i.items()}\n",
-    "t2set['tit_hr_Latn'], i2t[1074], prov2set['de_Latn']"
+    "t2set['tit_hr_Latn'], prov2set['de_Latn']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "id": "bfaafb22",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1221"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prov"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 39,
    "id": "d2589993",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b76d6a375f604a5e9b58d2a7aad3fe2b",
+       "model_id": "c600f8261655413eb25cec3f109833d7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/8313926 [00:00<?, ?it/s]"
+       "  0%|          | 0/8314074 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -600,10 +580,10 @@
     {
      "data": {
       "text/plain": [
-       "(5099, 2135573, {'fn0': 0, 'fn1': 0, 'fn2': 0, 'ln': 0, 'tit': 4043})"
+       "{'fn0': 0, 'fn1': 0, 'fn2': 0, 'ln': 0, 'tit': 4043}"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,19 +602,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 40,
    "id": "4e2afcb1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adaf314a9bbf4e4bb13aac78dbb8d10d",
+       "model_id": "28fa2c5c6e234ccc9e91382937bb0fe6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/8313926 [00:00<?, ?it/s]"
+       "  0%|          | 0/8314074 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -643,10 +623,10 @@
     {
      "data": {
       "text/plain": [
-       "(20, 1263429, (1, 5.88), (16, 94.12), (4043, 100.0))"
+       "(20, 1263446, (1, 5.88), (16, 94.12), (4043, 100.0))"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "id": "566f552c",
    "metadata": {},
    "outputs": [],
@@ -691,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "eb00b35f",
    "metadata": {},
    "outputs": [
@@ -703,14 +683,24 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'tqdm' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 15>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m batch \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     14\u001b[0m br \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t_prov, cnt \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtqdm\u001b[49m(freqs2\u001b[38;5;241m.\u001b[39mitems(), total\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(freqs2)):\n\u001b[1;32m     16\u001b[0m     tok, prov \u001b[38;5;241m=\u001b[39m t_prov\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mbytes\u001b[39m(tok, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m)) \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m190\u001b[39m:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'tqdm' is not defined"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "93cbde324ada4e97aea30cbb50b970e6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/44574635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8314074\n"
      ]
     }
    ],
@@ -719,23 +709,43 @@
     "    cur.execute('drop table mondo.wiki_name_parts purge') \n",
     "except:\n",
     "    pass\n",
-    "cur.execute('create table mondo.wiki_name_parts (token varchar2(200), prov number(4,0), cnt number(6, 0), ratio number(6, 2), CONSTRAINT pk_locations PRIMARY KEY (token, prov)) ORGANIZATION INDEX')\n",
-    "#cur.execute('delete  from  mondo.wiki_name_parts')\n",
+    "cur.execute(\"\"\"create table mondo.wiki_name_parts (token varchar2(200), lang varchar2(10), fn0 number(6, 0), fn1 number(6, 0), fn2 number(6, 0),\n",
+    "            ln number(6, 0), tit number(6, 0), CONSTRAINT pk_locations PRIMARY KEY (token, lang)) ORGANIZATION INDEX\"\"\")\n",
     "print('loading ...')\n",
     "batch = []\n",
     "br = 0\n",
-    "for t_prov, cnt in tqdm(freqs2.items(), total=len(freqs2)):\n",
-    "    tok, prov = t_prov\n",
+    "for (tok, lng), cnt in tqdm(freqs.items(), total=len(freqs)):\n",
     "    if len(bytes(tok, 'utf-8')) < 190:\n",
-    "        batch.append((tok, prov, cnt[0], cnt[1]))\n",
+    "        batch.append((tok, lng, cnt['fn0'], cnt['fn1'], cnt['fn2'], cnt['ln'], cnt['tit'] ))\n",
     "    if len(batch)>10_048:\n",
-    "        cur.executemany('insert into mondo.wiki_name_parts values (:1, :2, :3, :4) ', batch) \n",
+    "        cur.executemany('insert into mondo.wiki_name_parts values (:1, :2, :3, :4, :5, :6, :7) ', batch) \n",
     "        connection.commit()\n",
     "        batch = []\n",
     "    br += 1\n",
-    "cur.executemany('insert into mondo.wiki_name_parts values (:1, :2, :3, :4) ', batch) \n",
+    "cur.executemany('insert into mondo.wiki_name_parts values (:1, :2, :3, :4, :5, :6, :7) ', batch) \n",
     "connection.commit()\n",
     "print(br)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8f1a45b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(8313994,)]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute('select count(*) from mondo.wiki_name_parts').fetchall()"
    ]
   },
   {
