--- a/wiki_names_titles.ipynb
+++ b/wiki_names_titles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "830f5eae",
    "metadata": {},
    "outputs": [
@@ -11,11 +11,13 @@
      "output_type": "stream",
      "text": [
       "{'en'}\n",
-      "{'da', 'id', 'cs', 'en', 'sv', 'eu', 'vi', 'hu', 'fa', 'lb', 'ru', 'ar', 'pt', 'nb', 'uk', 'lt', 'my', 'tr', 'fr', 'zh', 'kk', 'nn', 'fi'}\n"
+      "{'nn', 'ru', 'en', 'vi', 'fi', 'tr', 'pt', 'id', 'kk', 'mt', 'cs', 'fa', 'uk', 'lb', 'zh', 'ar', 'hu', 'eu', 'da', 'sv', 'nb', 'my', 'lt', 'fr'}\n"
      ]
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.insert(0, '/projekti/wikidata')\n",
     "import os\n",
     "from collections import defaultdict, Counter\n",
     "from text_utils import remove_reg, tokenise, get_provenance\n",
@@ -782,10 +784,10 @@
      "evalue": "name 'cur' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcur\u001b[49m\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mselect m.n, t.t from mondo.name_m m, mondo.TYPEID t where t.id=m.t and m.n=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmr.\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mfetchall()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'cur' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [1]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mcur\u001B[49m\u001B[38;5;241m.\u001B[39mexecute(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mselect m.n, t.t from mondo.name_m m, mondo.TYPEID t where t.id=m.t and m.n=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmr.\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m)\u001B[38;5;241m.\u001B[39mfetchall()\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'cur' is not defined"
      ]
     }
    ],
