--- a/wiki_person.ipynb
+++ b/wiki_person.ipynb
@@ -140,32 +140,29 @@
     }
    ],
    "source": [
-    "def get_wiki_cc(country, birth_death_place, language):\n",
-    "    ccs = Counter()\n",
-    "    for bp in birth_death_place:\n",
-    "        if bp[5:] in q2cc:\n",
-    "            ccs[q2cc[bp[5:]]] += 1\n",
-    "    for cq in j['country']:\n",
-    "        if cq[5:] in q2cc:\n",
-    "            ccs[q2cc[cq[5:]]] += 2\n",
-    "    for lng in language:\n",
-    "        lng = lng[5:]\n",
-    "        if lng in wikil2cc:\n",
-    "            for cl, bod in wikil2cc[lng].items():\n",
-    "                if cl in ccs or len(ccs)==0:\n",
-    "                    ccs[cl] += bod / 100\n",
-    "    ccs = ccs.most_common()\n",
-    "    cc,_ = ccs[0] if len(ccs)>0 else ('', '')\n",
-    "    return cc, ccs\n",
+    "from wikilang2iso import get_wiki_cc, cc_weights\n",
     "\n",
     "for i, l in tqdm(enumerate(gzip.open('/backup/wikidata/wikinelma.jsonl.gz')), total=17_630_406):\n",
     "    j = json.loads(l)\n",
     "    if j['type'] == 'per':\n",
     "        qid = int(j['wiki_id'][1:])\n",
-    "        cc, ccs = get_wiki_cc(j['country']+j['nationality']+j['birth_place'], j['residence']+j['death_place']+j['positions']+j['educated_at']+j['works_at'], j['native_language'])\n",
+    "        cc, ccs = get_wiki_cc({k: v for k, v in j in k in cc_weights})\n",
     "        break \n",
     "ccs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "{'a': 1}+{'b': 2}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true
+   },
+   "id": "b1e6775a00173c3b"
   },
   {
    "cell_type": "code",
