--- a/wiki_person.ipynb
+++ b/wiki_person.ipynb
@@ -1085,7 +1085,7 @@
     "    j = json.loads(l)\n",
     "    if j['type'] == 'per':\n",
     "        qid = int(j['wiki_id'][1:])\n",
-    "        cc, ccs = get_wiki_cc(j['country']+j['nationality'], j['residence']+j['birth_place']+j['death_place']+j['positions']+j['educated_at']+j['works_at'], j['native_language'])\n",
+    "        cc, ccs = get_wiki_cc({k: v for k, v in j if k in cc_weights})\n",
     "        name = None\n",
     "        if j['native_language']:\n",
     "            langs = Counter([iso2w[q[5:]] for q in j['native_language'] if q[5:] in iso2w])\n",
