--- a/wiki_names_titles.ipynb
+++ b/wiki_names_titles.ipynb
@@ -38,6 +38,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "630abcea-b73d-4a4c-a0d4-9514bcef1703",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "2dacf8cd",
    "metadata": {},
@@ -356,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b14fecbd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f963c86cd9264db29d967303a5dc0896",
+       "model_id": "849ca4cba651439d904eed19df945ddc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -377,16 +385,18 @@
    ],
    "source": [
     "freq_nelma = Counter()\n",
-    "for l in tqdm(open('/backup/wikidata/wiki_nelma.jsonl'), total=10558506):\n",
+    "stat = Counter()\n",
+    "for l in tqdm(gzip.open('/backup/wikidata/wiki_nelma.jsonl.gz'), total=10558506):\n",
     "    j = json.loads(l)\n",
+    "    stat[j['type']] += 1\n",
     "    if 'title' in j:\n",
     "        for qtit in j['title']:\n",
     "            qtit = int(qtit[6:])\n",
     "            freq_nelma[qtit] += 1\n",
-    "            if qtit not in TODO:\n",
-    "                TODO[qtit].add('tit')\n",
-    "            elif 'tit' not in TODO[qtit]:\n",
-    "                TODO[qtit].add('tit')\n",
+    "            #if qtit not in TODO:\n",
+    "            #    TODO[qtit].add('tit')\n",
+    "            #elif 'tit' not in TODO[qtit]:\n",
+    "            #    TODO[qtit].add('tit')\n",
     "    if 'fn' in j:\n",
     "        for qtit in j['fn']:\n",
     "            qtit = int(qtit[6:])\n",
@@ -394,7 +404,9 @@
     "    if 'ln' in j:\n",
     "        for qtit in j['ln']:\n",
     "            qtit = int(qtit[6:])\n",
-    "            freq_nelma[qtit] += 1\n"
+    "            freq_nelma[qtit] += 1\n",
+    "\n",
+    "stat, freq_nelma"
    ]
   },
   {
