--- a/wiki_names_titles.ipynb
+++ b/wiki_names_titles.ipynb
@@ -364,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b14fecbd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "849ca4cba651439d904eed19df945ddc",
+       "model_id": "58a3d7ec57f24afaafe5f828cb994972",
        "version_major": 2,
        "version_minor": 0
       },
@@ -381,13 +381,34 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'N.TITLE',\n",
+       " 'instance': ['WIKI_Q28640', 'WIKI_Q4164871'],\n",
+       " 'variants': ['WIKI_Q1650915'],\n",
+       " 'oposite_gender': [],\n",
+       " 'nickname': [],\n",
+       " 'soundex': [],\n",
+       " 'cologne': [],\n",
+       " 'native': [],\n",
+       " 'transliteration': [],\n",
+       " 'short_name': [],\n",
+       " 'wiki_id': 'Q901'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "freq_nelma = Counter()\n",
     "stat = Counter()\n",
-    "for l in tqdm(gzip.open('/backup/wikidata/wiki_nelma.jsonl.gz'), total=10558506):\n",
+    "for l in tqdm(gzip.open('/backup/wikidata/wikiname.jsonl.gz'), total=10558506):\n",
     "    j = json.loads(l)\n",
+    "    break\n",
     "    stat[j['type']] += 1\n",
     "    if 'title' in j:\n",
     "        for qtit in j['title']:\n",
@@ -406,7 +427,7 @@
     "            qtit = int(qtit[6:])\n",
     "            freq_nelma[qtit] += 1\n",
     "\n",
-    "stat, freq_nelma"
+    "j"
    ]
   },
   {
