--- a/se_hr.ipynb
+++ b/se_hr.ipynb
@@ -133,28 +133,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "6a22033c-ea15-4c93-b1a8-3aaa57c6b9b9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "207 /backup/wikidata/sehr.csv\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/backup/wikidata/wiki_person.jsonl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m prvo \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m      4\u001b[0m fo \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/backup/wikidata/ushr.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/backup/wikidata/wiki_person.jsonl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m, total\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10_618_668\u001b[39m):\n\u001b[1;32m      6\u001b[0m     j \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mloads(l)\n\u001b[1;32m      7\u001b[0m     d \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mqid\u001b[39m\u001b[38;5;124m'\u001b[39m: j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname_hr\u001b[39m\u001b[38;5;124m'\u001b[39m: j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ml\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhr\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhr\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ml\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m      8\u001b[0m          \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname_en\u001b[39m\u001b[38;5;124m'\u001b[39m: j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ml\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124men\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124men\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ml\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdesc_en\u001b[39m\u001b[38;5;124m'\u001b[39m: j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdesc\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124men\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124men\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdesc\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      9\u001b[0m          \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdesc_sv\u001b[39m\u001b[38;5;124m'\u001b[39m: j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdesc\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124men\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124men\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m j[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdesc\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     10\u001b[0m         }\n",
+      "File \u001b[0;32m/projekti/venv311/lib/python3.11/site-packages/IPython/core/interactiveshell.py:286\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    280\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    281\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    283\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    284\u001b[0m     )\n\u001b[0;32m--> 286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/backup/wikidata/wiki_person.jsonl'"
      ]
     }
    ],
    "source": [
-    "!wc -l /backup/wikidata/sehr.csv"
+    "import json\n",
+    "from tqdm.auto import tqdm\n",
+    "prvo = True\n",
+    "fo = open('/backup/wikidata/ushr.csv', 'w')\n",
+    "for l in tqdm(open('/backup/wikidata/wiki_person.jsonl'), total=10_618_668):\n",
+    "    j = json.loads(l)\n",
+    "    d = {'qid': j['id'], 'name_hr': j['l']['hr'] if 'hr' in j['l'] else '', \n",
+    "         'name_en': j['l']['en'] if 'en' in j['l'] else '', 'desc_en': j['desc']['en'] if 'en' in j['desc'] else '',\n",
+    "         'desc_sv': j['desc']['en'] if 'en' in j['desc'] else '',\n",
+    "        }\n",
+    "    se = False\n",
+    "    hr = False\n",
+    "    for k in ['country residence', 'birth_place', 'place of death burial', 'educated at', 'work location', 'employer', 'language']:\n",
+    "        ccs = set()\n",
+    "        for v in j[k]:\n",
+    "            v = v.replace('WIKI_','')\n",
+    "            if k != 'language':\n",
+    "                if v in q2cc:\n",
+    "                    ccs.add(q2cc[v])\n",
+    "            else:\n",
+    "                if v in wikil2cc:\n",
+    "                    ccs.update(wikil2cc[v])\n",
+    "        if 'HR' in ccs:\n",
+    "            hr = True\n",
+    "        if 'US' in ccs:\n",
+    "            se = True\n",
+    "        d[k] = list(ccs)\n",
+    "    d['hrwiki'] = 'hrwiki' in j['sitelinks']\n",
+    "    d['uswiki'] = 'svwiki' in j['sitelinks']\n",
+    "    if (se and hr) or (se and d['hrwiki'] and not d['swwiki']) or (hr and not d['hrwiki'] and d['swwiki']):\n",
+    "        if prvo:\n",
+    "            fo.write('\\t'.join(d.keys()))\n",
+    "            fo.write('\\n')\n",
+    "            prvo = False\n",
+    "        fo.write('\\t'.join([str(a) for a in d.values()]))\n",
+    "        fo.write('\\n')\n",
+    "    break\n",
+    "fo.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57e4b5d2-287b-4cb1-8f68-584b0ec925c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from tqdm.auto import tqdm\n",
+    "prvo = True\n",
+    "fo = open('/backup/wikidata/lvhr.csv', 'w')\n",
+    "for l in tqdm(open('/backup/wikidata/wiki_person.jsonl'), total=10_618_668):\n",
+    "    j = json.loads(l)\n",
+    "    d = {'qid': j['id'], 'name_hr': j['l']['hr'] if 'hr' in j['l'] else '', \n",
+    "         'name_en': j['l']['en'] if 'en' in j['l'] else '', 'desc_en': j['desc']['en'] if 'en' in j['desc'] else '',\n",
+    "         'desc_sv': j['desc']['en'] if 'en' in j['desc'] else '',\n",
+    "        }\n",
+    "    se = False\n",
+    "    hr = False\n",
+    "    for k in ['country residence', 'birth_place', 'place of death burial', 'educated at', 'work location', 'employer', 'language']:\n",
+    "        ccs = set()\n",
+    "        for v in j[k]:\n",
+    "            v = v.replace('WIKI_','')\n",
+    "            if k != 'language':\n",
+    "                if v in q2cc:\n",
+    "                    ccs.add(q2cc[v])\n",
+    "            else:\n",
+    "                if v in wikil2cc:\n",
+    "                    ccs.update(wikil2cc[v])\n",
+    "        if 'HR' in ccs:\n",
+    "            hr = True\n",
+    "        if 'US' in ccs:\n",
+    "            se = True\n",
+    "        d[k] = list(ccs)\n",
+    "    d['hrwiki'] = 'hrwiki' in j['sitelinks']\n",
+    "    d['lvwiki'] = 'lvwiki' in j['sitelinks']\n",
+    "    if (se and hr) or (se and d['hrwiki'] and not d['lvwiki']) or (hr and not d['lvwiki'] and d['lvwiki']):\n",
+    "        if prvo:\n",
+    "            fo.write('\\t'.join(d.keys()))\n",
+    "            fo.write('\\n')\n",
+    "            prvo = False\n",
+    "        fo.write('\\t'.join([str(a) for a in d.values()]))\n",
+    "        fo.write('\\n')\n",
+    "fo.close()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3.11",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3.11"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
