--- a/wiki_person.ipynb
+++ b/wiki_person.ipynb
@@ -154,15 +154,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b1e6775a00173c3b",
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "{'a': 1}+{'b': 2}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "is_executing": true
-   },
-   "id": "b1e6775a00173c3b"
+   ]
   },
   {
    "cell_type": "code",
@@ -1335,7 +1338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
